--- a/examples/Iris Example.ipynb
+++ b/examples/Iris Example.ipynb
@@ -65,7 +65,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {
     "collapsed": false
    },
@@ -75,7 +75,7 @@
     "import sys\n",
     "sys.path.append('../')\n",
     "\n",
-    "from dataset import SimpleDataset\n",
+    "from quick_experiment.dataset import SimpleDataset\n",
     "\n",
     "iris_dataset = SimpleDataset()\n",
     "indices = {'train': train_index, 'test': test_index}\n",
@@ -97,7 +97,7 @@
    },
    "outputs": [],
    "source": [
-    "import model\n",
+    "from quick_experiment import model\n",
     "model = reload(model)\n",
     "from sklearn.linear_model import LogisticRegression\n",
     "\n",
@@ -115,7 +115,7 @@
    },
    "outputs": [],
    "source": [
-    "import experiment\n",
+    "from quick_experiment import experiment\n",
     "experiment = reload(experiment)\n",
     "lr_experiment = experiment.Experiment(iris_dataset, config=config)"
    ]
@@ -131,7 +131,7 @@
    "cell_type": "code",
    "execution_count": 17,
    "metadata": {
-    "collapsed": false
+    "collapsed": true
    },
    "outputs": [
     {
@@ -181,13 +181,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 3,
    "metadata": {
-    "collapsed": false
+    "collapsed": true
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'samples' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-3-c968c5cadd9a>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      2\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      3\u001b[0m \u001b[0miris_sampled_dataset\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mSimpleSampledDataset\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 4\u001b[0;31m \u001b[0miris_sampled_dataset\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mcreate_samples\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0miris\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mdata\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0miris\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mtarget\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0msamples\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mpartition_sizes\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m: name 'samples' is not defined"
+     ]
+    }
+   ],
    "source": [
-    "from dataset import SimpleSampledDataset\n",
+    "from quick_experiment.dataset import SimpleSampledDataset\n",
     "\n",
     "iris_sampled_dataset = SimpleSampledDataset()\n",
     "iris_sampled_dataset.create_samples(iris.data, iris.target, samples, partition_sizes)"
