--- a/examples/Minst example using a Recurrent Neural Networks model in tensorflow.ipynb
+++ b/examples/Minst example using a Recurrent Neural Networks model in tensorflow.ipynb
@@ -38,11 +38,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 1,
    "metadata": {
-    "collapsed": true
+    "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "ImportError",
+     "evalue": "No module named quick_experiment",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mImportError\u001b[0m                               Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-1-67e61adb6c58>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      5\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0mmatplotlib\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mpyplot\u001b[0m \u001b[0;32mas\u001b[0m \u001b[0mplt\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      6\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0mseaborn\u001b[0m \u001b[0;32mas\u001b[0m \u001b[0msns\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 7\u001b[0;31m \u001b[0;32mfrom\u001b[0m \u001b[0mquick_experiment\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0mutils\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[0;31mImportError\u001b[0m: No module named quick_experiment"
+     ]
+    }
+   ],
    "source": [
     "import numpy\n",
     "import os\n",
@@ -50,7 +62,7 @@
     "import tensorflow as tf\n",
     "import matplotlib.pyplot as plt\n",
     "import seaborn as sns\n",
-    "import utils"
+    "from quick_experiment import utils"
    ]
   },
   {
@@ -85,7 +97,7 @@
    },
    "outputs": [],
    "source": [
-    "import dataset\n",
+    "from quick_experiment  import dataset\n",
     "dataset = reload(dataset)\n",
     "\n",
     "samples = 1\n",
@@ -198,7 +210,7 @@
    },
    "outputs": [],
    "source": [
-    "from models import lstm, mlp\n",
+    "from quick_experiment.models import lstm, mlp\n",
     "mlp = reload(mlp)\n",
     "lstm = reload(lstm)\n",
     "\n",
@@ -287,7 +299,7 @@
    "source": [
     "# Remove previous directory\n",
     "import shutil\n",
-    "logs_dirname = '../../results/examples/mnist/'\n",
+    "logs_dirname = '../../../results/examples/mnist/'\n",
     "try:\n",
     "    shutil.rmtree(logs_dirname)\n",
     "except OSError:\n",
@@ -304,7 +316,7 @@
    },
    "outputs": [],
    "source": [
-    "import experiment\n",
+    "from quick_experiment import experiment\n",
     "experiment = reload(experiment)\n",
     "\n",
     "config = {\n",
