--- a/examples/Spice example using a Recurrent Neural Networks model in tensorflow.ipynb
+++ b/examples/Spice example using a Recurrent Neural Networks model in tensorflow.ipynb
@@ -56,13 +56,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {
     "collapsed": true
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "ImportError",
+     "evalue": "No module named quick_experiment",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mImportError\u001b[0m                               Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-1-d84e89d6d3c2>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0;32mfrom\u001b[0m \u001b[0mquick_experiment\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0mutils\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      2\u001b[0m \u001b[0mutils\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0msafe_mkdir\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mDATASET_DIR\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mImportError\u001b[0m: No module named quick_experiment"
+     ]
+    }
+   ],
    "source": [
-    "import utils\n",
+    "from quick_experiment import utils\n",
     "utils.safe_mkdir(DATASET_DIR)"
    ]
   },
@@ -100,7 +112,6 @@
    "outputs": [],
    "source": [
     "from sklearn.preprocessing import OneHotEncoder\n",
-    "\n",
     "\n",
     "\n",
     "def get_instances(elements, sequences):\n",
@@ -151,7 +162,7 @@
    },
    "outputs": [],
    "source": [
-    "import dataset\n",
+    "from quick_experiment import dataset\n",
     "dataset = reload(dataset)\n",
     "\n",
     "samples = 1\n",
@@ -186,9 +197,9 @@
    },
    "outputs": [],
    "source": [
-    "import experiment\n",
+    "from quick_experiment import experiment\n",
     "experiment = reload(experiment)\n",
-    "from models import lstm, mlp\n",
+    "from quick_experiment.models import lstm, mlp\n",
     "mlp = reload(mlp)\n",
     "lstm = reload(lstm)\n",
     "\n",
@@ -366,7 +377,7 @@
    },
    "outputs": [],
    "source": [
-    "import dataset\n",
+    "from quick_experiment import dataset\n",
     "dataset = reload(dataset)\n",
     "\n",
     "samples = 1\n",
@@ -384,9 +395,9 @@
    },
    "outputs": [],
    "source": [
-    "import experiment\n",
+    "from quick_experiment import experiment\n",
     "experiment = reload(experiment)\n",
-    "from models import lstm\n",
+    "from quick_experiment.models import lstm\n",
     "lstm = reload(lstm)"
    ]
   },
